# validate-call-safe

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: test.yml
examples/: simple_safe.py  simple_unsafe.py
examples/body_errors/: signature_ok_body_nameerror.py  signature_ok_body_nameerror_captured.py  signature_ok_body_ve.py
examples/error_unions/: error_model_fallback.py  union.py
examples/non_validation_error/: allowed_raise.py  unbracketted.py
examples/reporting/: bad_return.py  custom_error.py  happy.py  simple_print.py
examples/simple/: custom_error_model.py  unsafe.py
examples/simple/default_error_model/: bad_return_type.py  bracketted.py  unbracketted.py  union.py
examples/speedbench/: README.md  bench_simple.py
examples/validated_service/: service.py  service_cli.py  simple_service.py
src/validate_call_safe/: __init__.py  decorator.py  errors.py
src/validate_call_safe/errors/: __init__.py  details.py  model.py
tests/: body_error_test.py  examples_test.py  non_validation_error_test.py
