[build-system]
requires = [
    "pdm-backend",
]
build-backend = "pdm.backend"

[project]
name = "validate-call-safe"
version = "0.3.1"
description = "Safe, non-error-raising, alternative to Pydantic validate_call decorator"
authors = [
    { name = "Louis Maddox", email = "louismmx@gmail.com" },
]
dependencies = [
    "pydantic>=2.0.1",
    "typing-extensions>=4.12.2",
]
requires-python = ">=3.10"
readme = "README.md"

[project.license]
text = "MIT"

[project.urls]
Homepage = "https://github.com/lmmx/validate-call-safe"
Repository = "https://github.com/lmmx/validate-call-safe.git"

[tool.pdm]
distribution = true

[tool.pdm.dev-dependencies]
test = [
    "pytest>=8.3.2",
]
