[build-system]
build-backend = "uv_build"
requires = ["uv_build>=0.11.6,<0.12"]

[dependency-groups]
test = [
  "pytest>=8.3.2",
  "inline-snapshot>=0.32"
]

[project]
name = "validate-call-safe"
version = "0.3.5"
description = "Safe, non-error-raising, alternative to Pydantic validate_call decorator"
authors = [
  {name = "Louis Maddox", email = "louismmx@gmail.com"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python",
]
dependencies = [
  "pydantic>=2.0.1",
  "typing-extensions>=4.12.2"
]
requires-python = ">=3.10"
readme = "README.md"

[project.license]
text = "MIT"

[project.urls]
Homepage = "https://github.com/lmmx/validate-call-safe"
Repository = "https://github.com/lmmx/validate-call-safe.git"

[tool.pdm]
distribution = true

[tool.uv]
default-groups = "all"
